# cadical

./: .gitignore  CMakeLists.txt  build_debug.sh  build_emscripten.sh  build_norm.sh  build_notest.sh  build_release.sh  build_static.sh  build_static_release.sh  configure  flake.nix  makefile.in
.github/workflows/: build.yml  nix.yml
src/: cadical.hpp  config.cpp  internal.cpp  options.cpp  options.hpp  solver.cpp
